--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="logo">TEKNIKPROJEKT</div>
       <ul class="menu">
         <li>Mina Teknikprojekt</li>
+        <li> hej  </li>
       </ul>
     </nav>
     <section>
