--- a/projekt/projekt.html
+++ b/projekt/projekt.html
@@ -7,7 +7,7 @@
     <title>Bro projekt</title>
 
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/reset.ss" />
+    <link rel="stylesheet" href="styles/reset.css" />
   </head>
   <body></body>
 </html>
