--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <nav>
       <div class="logo">TEKNIKPROJEKT</div>
       <ul class="menu">
-        <li>Mina Teknikprojekt</li>
-        
+        <li>Min tekniksida</li>
       </ul>
     </nav>
     <section>
@@ -28,6 +27,10 @@
         <h1>TEKNIK</h1>
         <p>Mina Teknikprojekt</p>
       </header>
+      <img class="arbete" src="bro.jpg" alt="" />
     </section>
+    <div class="beskrivning">
+      Det här är mitt projekt P.A.B eller Project Arduino Bridge
+    </div>
   </body>
 </html>
