ändrar spacingen mellan mina bokstäver och gör en subfolder för mina bilder

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>TEKNIK</h1>
         <p>Mina Teknikprojekt</p>
       </header>
-      <img class="arbete" src="bro.jpg" alt="" />
+      <img class="arbete" src="styles/bilder/bro.jpg" alt="" />
     </section>
     <div class="beskrivning">
       Det här är mitt projekt P.A.B eller Project Arduino Bridge
