skapar en underrubrik för att markera var mina projekt börjar visas (som en inledning till en ny del av sidan)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <h1>TEKNIK</h1>
         <p>Mina Teknikprojekt</p>
       </header>
+      <header class="underrubrik">
+        <h2>Teknikprojekt</h2>
+      </header>
       <img class="arbete" src="styles/bilder/bro.jpg" alt="" />
     </section>
     <div class="beskrivning">
