--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <header class="underrubrik">
         <h2>Teknikprojekt</h2>
       </header>
-      <img class="arbete" src="styles/bilder/bro.jpg" alt="" />
+      <img class="arbete" src="styles/bilder/bro.jpg" />
     </section>
     <div class="beskrivning">
       Det här är mitt projekt P.A.B eller Project Arduino Bridge
